kubernetes/platform/config/garage/garage-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-admin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Garage"
    gethomepage.dev/group: "Platform"
    gethomepage.dev/icon: "minio.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=garage"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "garage.${internal_domain}"
  rules:
    - backendRefs:
        - name: garage
          port: 3902
