kubernetes/platform/config/garage/garage-s3-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-s3
spec:
  ingressClassName: internal
  rules:
    - host: s3.${internal_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  number: 3900
    - host: "*.s3.${internal_domain}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage
                port:
                  number: 3900
  tls:
    - hosts:
        - s3.${internal_domain}
        - "*.s3.${internal_domain}"
